--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,18 @@ body {
     background-color: black;
     font-family: sans-serif;
 }
+
+
+/* ******************Custom CSS Added******************** */
+
+
+/* Sidebar to Extend */
+.col-span-12.p-4.text-center.bg-white.lg\:col-span-3.rounded-2xl {
+    grid-column: span 4 / 4;
+}
+
+/* Padding to Extend Whole Homepage */
+.grid.grid-cols-12.gap-6.px-5.lg\:px-48.my-14.sm\:px-20.md\:px-32 {
+    padding-left: 8rem;
+    padding-right: 8rem;
+}
