--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,27 +14,27 @@ body {
 /* Remove this if you want Responsive */
 
 /* Sidebar to Extend */
-.col-span-12.p-4.text-center.bg-white.lg\:col-span-3.rounded-2xl {
+/* .col-span-12.p-4.text-center.bg-white.lg\:col-span-3.rounded-2xl {
     grid-column: span 4 / 4;
-}
+} */
 
 /* Padding to Extend Whole Homepage */
-.grid.grid-cols-12.gap-6.px-5.lg\:px-48.my-14.sm\:px-20.md\:px-32 {
+/* .grid.grid-cols-12.gap-6.px-5.lg\:px-48.my-14.sm\:px-20.md\:px-32 {
     padding-left: 8rem;
     padding-right: 8rem;
-}
+} */
 
 /* Name color changed */
-span.text-green {
+/* span.text-green {
     color: #ff4d5a;
-}
+} */
 
 /* Social Icons color changed */
-svg.w-8.h-8.cursor-pointer {
+/* svg.w-8.h-8.cursor-pointer {
     color: #ff4d5a;
-}
+} */
 
 /* Some Symbol Color Changed */
-svg.w-12.h-12.text-green {
+/* svg.w-12.h-12.text-green {
     color: crimson;
-}
+} */
